2008-01-18  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Actor transformations: Use the correct example code.
	Thanks to Ashwin Kashyap.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Effects: Mention optional timeline cloning when using effects.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Actors: Added clipping sub-section, after talking to Ebassi.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Corrected the events chain sections, now explaining the 
	capture-event signal. 

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Introduction: Mention that it is 
	a retatained mode API, though that would be obvious if you already knew what 
	that meant.
	Mention that timelines and behaviours use callback functions of time to change actor properties. 
	I don't see much more that we can say about these without reallying getting into the details, 
	which we do in the relevant chapters.
	Actors: Mention show/hide.
	Actors: Events: Describe false/true return value and the sequence of actors that handle events.
	Effects, Behaviours: Mention CLUTTER_ALPHA_MAX.
	
	These changes are based on the notes from Matthew Allum.

2007-12-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Actor Events: 
	motion events are now on by default, so rephrase.
	* examples/actor_events/main.c: (main):
	* examples/full_example/main.c: (main):
	Don't bother calling clutter_set_motion_events_enabled(TRUE);

2007-12-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Timelines, Behaviours: Mention the 
	ClutterTimeline::completed signal, which you should handle when you want 
	to unref timelines and behaviours as soon as possible.

2007-12-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Behaviours: ClutterAlpha _does_ have a a 